deploy/bluegreen/k8s-local-svcupdate.yml
---
kind: Service
apiVersion: v1
metadata:
   namespace: coetech
   name: helloworld-svc
   labels:
    app: helloworld
    version: ${VERSION}       
spec:
   selector:
    app: helloworld
    version: ${VERSION}
   ports:
   - port: 80
     targetPort: 5000
   type: ClusterIP
