deploy/bluegreen/k8s-local-blue.yml
kind: Namespace
apiVersion: v1
metadata:
  name: coetech
  labels:
    app: helloworld
    version: blue

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-blue
  namespace: coetech
  labels:
    app: helloworld
    version: blue
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
      version: blue
  template:
    metadata:
      namespace: coetech
      labels:
        app: helloworld
        version: blue
    spec:
      containers:
      - name: helloworld
        image: helloworld:1.2
        ports:
            - containerPort: 5000
        resources:
          requests:
            memory: "1200Mi"
            cpu: "150m"
          limits:
            memory: "1316Mi"
            cpu: "600m"
---
kind: Service
apiVersion: v1
metadata:
   namespace: coetech
   name: helloworld-blue-svc
   labels:
    app: helloworld
    version: blue       
spec:
   selector:
    app: helloworld
    version: blue
   ports:
   - port: 80
     targetPort: 5000
   type: ClusterIP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-blue-ingress
  namespace: coetech
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/load-balance: ewma
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  rules:
  - host: helloworld-blue.local
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-blue-svc
          servicePort: 80
